Updated pom.xml to allow running class on server. Fixed some other issues.

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <configuration>
+                    <mainClass>org.anieanie.cardgame.training.whot.WhotGameClassifier</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
